; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hb.c_hb_add_filter.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hb.c_hb_add_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [48 x i8] c"hb_add_filter: failed to parse filter settings!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hb_add_filter(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i32* @hb_parse_filter_settings(i8* %8)
  store i32* %9, i32** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = call i32 @hb_log(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %23

17:                                               ; preds = %12, %3
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @hb_add_filter_dict(i32* %18, i32* %19, i32* %20)
  %22 = call i32 @hb_value_free(i32** %7)
  br label %23

23:                                               ; preds = %17, %15
  ret void
}

declare dso_local i32* @hb_parse_filter_settings(i8*) #1

declare dso_local i32 @hb_log(i8*) #1

declare dso_local i32 @hb_add_filter_dict(i32*, i32*, i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
